# pyfasthash

./: .codecov.yml  .coveragerc  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.MD  README.md  cmd_line  noxfile.py  pyhash.kpf  pyhash.py  pyhash.sln  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml
pyhash/: __init__.py
src/: CityHash.h  FNV1.h  FarmHash.h  Halftime.h  Hash.cpp  Hash.h  Highway.h  Lookup3.h  MetroHash.h  Mum.h  MurmurHash.h  SpookyHash.h  SuperFastHash.h  T1.h  T1ha.h  pyhash.vcproj  wyHash.h  xxHash.h
src/MurmurHash/: MurmurHash1.cpp  MurmurHash1.h  MurmurHash2.cpp  MurmurHash2A.cpp  MurmurHash2_64.cpp  MurmurHash3.h  MurmurHashAligned2.cpp
src/fnv/: Makefile
src/lookup3/: lookup3.c
src/smhasher/.svn/: wc.db
tags/0.3/: README.txt
tags/0.3/src/: FNV1.h  Hash.cpp  Hash.h  MurmurHash.h  SuperFastHash.h  pyhash.vcproj
tags/0.4/: pyfasthash.kpf  pyhash.sln
tags/0.4/src/: FNV1.h  Hash.h  Lookup3.h  SuperFastHash.h
tests/: conftest.py  requirements.txt  test_cityhash.py  test_farmhash.py  test_fingerprint.py  test_fnv1.py  test_halftime.py  test_hasher.py  test_highway.py  test_issues.py  test_lookup3.py  test_metrohash.py  test_mum.py  test_murmur.py  test_perf.py  test_spooky.py  test_superfast.py  test_t1hash.py  test_wyhash.py  test_xxhash.py
trunk/: pyhash.py  setup.py
trunk/src/: CityHash.h  FNV1.cpp  Hash.cpp  Hash.h  Lookup3.h  MurmurHash.h  SpookyHash.h  pyhash.vcproj  pyhash.vcxproj
trunk/src/MurmurHash/: MurmurHash2.h  MurmurHash2A.cpp  (+4 more)
(+10 files in other folders)
