[metadata]
name = pyhash
version = 0.10.0
url = https://github.com/flier/pyfasthash
download_url = https://github.com/flier/pyfasthash/releases
author = Flier Lu
author_email = flier.lu@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
license = Apache License, Version 2.0
license_files = LICENSE.txt
description = Python Non-cryptographic Hash Library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hash, hashing, fasthash
platforms = x86, x64, arm

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
install_requires = cpuid

[options.packages.find]
where = pyhash

[options.extras_require]
test = pytest

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
norecursedirs = .eggs .nox src build

[flake8]
exclude = 
    .git
    __pycache__
    src
max-line-length = 120

[mypy]
ignore_missing_imports = true